--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "dotenv": "^17.0.1",
     "electron": "^37.2.0",
+    "mongodb": "^6.17.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
